@@ -358,7 +358,6 @@ sub execute {
 			return $dbh->set_err(1,"Expected ".$sth->FETCH('NUM_OF_PARAMS')." bind values but was given ".@bind_values);
 		}
 
-		$cursor->clearBinds();
 		my $index=1;
 		my $bind_value;
 		foreach $bind_value (@bind_values) {
@@ -370,6 +369,7 @@ sub execute {
 
 	# send the query
 	if (not $cursor->executeQuery()) {
+		$cursor->clearBinds();
 		$sth->STORE('driver_NUM_OF_ROWS',0);
 		if (!$sth->FETCH('NUM_OF_FIELDS')) {
 			$sth->STORE('NUM_OF_FIELDS',0);
@@ -377,6 +377,7 @@ sub execute {
 		$sth->STORE('driver_FETCHED_ROWS',0);
 		return $dbh->DBI::set_err(1,$cursor->errorMessage());
 	}
+	$cursor->clearBinds();
 
 	# get some result set info
 	my $colcount=$cursor->colCount();
