@@ -45,7 +45,7 @@ class sqlrcursor_svr {
 		virtual	bool	inputBindString(const char *variable, 
 						uint16_t variablesize,
 						const char *value, 
-						uint16_t valuesize,
+						uint32_t valuesize,
 						int16_t *isnull);
 		virtual	bool	inputBindInteger(const char *variable, 
 						uint16_t variablesize,
