@@ -45,7 +45,7 @@ class db2cursor : public sqlrcursor_svr {
 		bool		inputBindString(const char *variable, 
 						uint16_t variablesize,
 						const char *value, 
-						uint16_t valuesize,
+						uint32_t valuesize,
 						int16_t *isnull);
 		bool		inputBindInteger(const char *variable, 
 						uint16_t variablesize,
