@@ -536,7 +536,7 @@ void freetdscursor::checkRePrepare() {
 bool freetdscursor::inputBindString(const char *variable,
 						uint16_t variablesize,
 						const char *value,
-						uint16_t valuesize,
+						uint32_t valuesize,
 						int16_t *isnull) {
 
 	checkRePrepare();
