@@ -345,7 +345,7 @@ bool mysqlcursor::supportsNativeBinds() {
 bool mysqlcursor::inputBindString(const char *variable, 
 						uint16_t variablesize,
 						const char *value, 
-						uint16_t valuesize,
+						uint32_t valuesize,
 						int16_t *isnull) {
 
 	if (mysqlconn->fakebinds || !usestmtprepare) {
