@@ -138,7 +138,7 @@ bool sqlitecursor::prepareQuery(const char *query, uint32_t length) {
 bool sqlitecursor::inputBindString(const char *variable, 
 						uint16_t variablesize,
 						const char *value, 
-						uint16_t valuesize,
+						uint32_t valuesize,
 						int16_t *isnull) {
 	return true;
 }
