@@ -419,7 +419,7 @@ void sybasecursor::checkRePrepare() {
 bool sybasecursor::inputBindString(const char *variable,
 						uint16_t variablesize,
 						const char *value,
-						uint16_t valuesize,
+						uint32_t valuesize,
 						int16_t *isnull) {
 
 	checkRePrepare();
